Added extensions to all the scripts

--- a/i3/i3.conf
+++ b/i3/i3.conf
@@ -118,7 +118,7 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
 # Lock the screen.
-bindsym $mod+Shift+l exec ~/dotfiles/scripts/lockscreen
+bindsym $mod+Shift+l exec ~/dotfiles/scripts/lockscreen.sh
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
