--- a/i3/i3.conf
+++ b/i3/i3.conf
@@ -200,6 +200,7 @@ bar {
 }
 
 # Auto start some things.
+exec udisksctl mount -b /dev/mmcblk2p1
 exec --no-startup-id nitrogen --restore
 exec compton -c -C -b
 
