Minor changes since moving to Arch and a new PC

--- a/i3/i3.conf
+++ b/i3/i3.conf
@@ -34,14 +34,13 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec terminator
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start rofi (a program launcher)
-bindsym $mod+d exec rofi -show drun
-#bindsym $mod+r exec rofi -show run
+# start dmenu (a program launcher)
+bindsym $mod+d exec dmenu_run
 
 # change focus
 #bindsym $mod+j focus left
