--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "emacs.d/plugins/all-the-icons.el"]
-	path = emacs.d/plugins/all-the-icons.el
-	url = https://github.com/domtronn/all-the-icons.el.git
+[submodule "emacs.d"]
+	path = emacs.d
+	url = git@github.com:nathanpc/emacs.d.git
