--- a/terminator/config
+++ b/terminator/config
@@ -1,21 +1,35 @@
 [global_config]
   geometry_hinting = True
-  title_font = LiterationMono Nerd Font Mono 10
-  title_inactive_bg_color = "#969896"
-  title_inactive_fg_color = "#1d1f21"
-  title_receive_bg_color = "#81a2be"
-  title_receive_fg_color = "#e8e8e8"
-  title_transmit_bg_color = "#cc6666"
-  title_transmit_fg_color = "#e8e8e8"
-  title_use_system_font = False
   use_custom_url_handler = True
+  title_transmit_fg_color = "#e8e8e8"
+  title_transmit_bg_color = "#cc6666"
+  title_receive_fg_color = "#e8e8e8"
+  title_receive_bg_color = "#81a2be"
+  title_inactive_fg_color = "#1d1f21"
+  title_inactive_bg_color = "#969896"
+  title_use_system_font = False
+  title_font = LiterationMono Nerd Font Mono 10
 [keybindings]
-  close_term = <Primary><Alt>w
-  close_window = <Primary><Alt>q
-  copy = <Alt>w
-  paste = <Primary>y
   split_horiz = <Alt>minus
   split_vert = <Alt>backslash
+  close_term = <Primary><Alt>w
+  copy = <Alt>w
+  paste = <Primary>y
+  close_window = <Primary><Alt>q
+[profiles]
+  [[default]]
+    audible_bell = True
+    background_color = "#1d1f21"
+    background_darkness = 0.7
+    background_type = transparent
+    cursor_color = "#aaaaaa"
+    font = LiterationMono Nerd Font Mono 10
+    foreground_color = "#c5c8c6"
+    scrollback_lines = 5000
+    palette = "#1d1f21:#cc6666:#b5bd68:#f0c674:#81a2be:#b294bb:#8abeb7:#c5c8c6:#969896:#cc6666:#b5bd68:#f0c674:#81a2be:#b294bb:#8abeb7:#ffffff"
+    login_shell = True
+    use_system_font = False
+    copy_on_selection = True
 [layouts]
   [[default]]
     [[[child0]]]
@@ -36,16 +50,3 @@
       type = Terminal
       uuid = f174048e-b74e-4954-8e39-0fd2100b057a
 [plugins]
-[profiles]
-  [[default]]
-    audible_bell = True
-    background_color = "#1d1f21"
-    background_darkness = 0.7
-    background_type = transparent
-    copy_on_selection = True
-    cursor_color = "#aaaaaa"
-    font = LiterationMono Nerd Font Mono 10
-    foreground_color = "#c5c8c6"
-    palette = "#1d1f21:#cc6666:#b5bd68:#f0c674:#81a2be:#b294bb:#8abeb7:#c5c8c6:#969896:#cc6666:#b5bd68:#f0c674:#81a2be:#b294bb:#8abeb7:#ffffff"
-    scrollback_lines = 5000
-    use_system_font = False
