Terminator - Using the Nord theme

--- a/terminator/config
+++ b/terminator/config
@@ -1,12 +1,12 @@
 [global_config]
   geometry_hinting = True
   use_custom_url_handler = True
-  title_transmit_fg_color = "#e8e8e8"
-  title_transmit_bg_color = "#cc6666"
-  title_receive_fg_color = "#e8e8e8"
-  title_receive_bg_color = "#81a2be"
-  title_inactive_fg_color = "#1d1f21"
-  title_inactive_bg_color = "#969896"
+  title_inactive_bg_color = "#4C566A"
+  title_inactive_fg_color = "#D8DEE9"
+  title_receive_bg_color = "#8FBCBB"
+  title_receive_fg_color = "#2E3440"
+  title_transmit_bg_color = "#88C0D0"
+  title_transmit_fg_color = "#2E3440"
   title_use_system_font = False
   title_font = LiterationMono Nerd Font Mono 10
 [keybindings]
@@ -19,14 +19,14 @@
 [profiles]
   [[default]]
     audible_bell = True
-    background_color = "#1d1f21"
     background_darkness = 0.85
     background_type = transparent
-    cursor_color = "#aaaaaa"
     font = LiterationMono Nerd Font Mono 10
-    foreground_color = "#c5c8c6"
     scrollback_lines = 5000
-    palette = "#1d1f21:#cc6666:#b5bd68:#f0c674:#81a2be:#b294bb:#8abeb7:#c5c8c6:#969896:#cc6666:#b5bd68:#f0c674:#81a2be:#b294bb:#8abeb7:#ffffff"
+    background_color = "#2E3440"
+    cursor_color = "#D8DEE9"
+    foreground_color = "#D8DEE9"
+    palette = "#3B4252:#BF616A:#A3BE8C:#EBCB8B:#81A1C1:#B48EAD:#88C0D0:#E5E9F0:#4C566A:#BF616A:#A3BE8C:#EBCB8B:#81A1C1:#B48EAD:#8FBCBB:#ECEFF4"
     login_shell = True
     use_system_font = False
     copy_on_selection = True
